# rust-physic-engine

./: Cargo.toml
shaders/: shader.frag.wgsl  shader.vert.wgsl
src/: gpu_renderer.rs  main.rs  solver.rs
src/solver/: cell.rs  quadtree.rs
