[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.11"
wgpu = "26.0.1"
nalgebra = "0.34.0"
bytemuck = { version = "1.4", features = ["derive"] }
pollster = "0.4.0"
rand = "0.9.2"
rand_distr = "0.5.1"
fast_poisson = "1.0.2"
serde_json = "1.0.142"
serde = { version = "1.0", features = ["derive"] }